force-app/main/default/objects/Revenue_Forecast__c/Revenue_Forecast__c.object-meta.xml
<CustomObject>
    <label>Revenue Forecast</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Revenue Forecast Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>