force-app/main/default/objects/Revenue_Forecast__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <formula>TEXT( Opportunity__r.Account.Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>