force-app/main/default/objects/Revenue_Forecast__c/fields/Cross_Selling_and_Upselling_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cross_Selling_and_Upselling_Amount__c</fullName>
    <label>Cross Selling and Upselling Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>