force-app/main/default/objects/Revenue_Forecast__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <formula>IF(ISPICKVAL( Type__c , &quot;Run rate&quot;), &quot;Run rate&quot;,
IF(ISPICKVAL( Type__c , &quot;Forecast&quot;), &quot;Forecast&quot;,
IF( Opportunity__r.Probability = 1, &quot;Closed Won&quot;, &quot;Pipeline&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category</label>
    <type>Text</type>
</CustomField>