force-app/main/default/objects/Revenue_Forecast__c/fields/Forecasted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Amount__c</fullName>
    <label>Forecasted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>