force-app/main/default/objects/Revenue_Forecast__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Forecasts</relationshipLabel>
    <relationshipName>Revenue_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>