force-app/main/default/objects/Revenue_Forecast__c/fields/Opportunity_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue_Date__c</fullName>
    <formula>Opportunity__r.Revenue_Forecast_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Revenue Date</label>
    <type>Date</type>
</CustomField>