force-app/main/default/objects/Revenue_Forecast__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <formula>IF(
    (Forecast_Category__c = &quot;Run rate&quot; || Forecast_Category__c = &quot;Forecast&quot; || Opportunity_Type__c = &quot;Renewal&quot;),
    Forecast_Date__c,
    ADDMONTHS( Forecast_Date__c,6))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>