force-app/main/default/objects/Revenue_Forecast__c/fields/Run_rate__c.field-meta.xml
<CustomField>
    <fullName>Run_rate__c</fullName>
    <label>Run rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>