force-app/main/default/objects/Revenue_Forecast__c/listViews/Run_Rates.listView-meta.xml
<ListView>
    <fullName>Run_Rates</fullName>
    <columns>NAME</columns>
    <columns>Forecast_Date__c</columns>
    <columns>Run_rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Run_rate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Run Rates</label>
    <language>en_US</language>
</ListView>